<resources>
    <string name="app_name" translatable="false">OpenWallet NYC</string>
    <string name="sync_block_height">Block %1$s</string>
    <string name="sync_syncing_percent">Syncing %1$d%%</string>
    <string name="sync_synced">Synced</string>
    <string name="app_package" translatable="false">com.newyorkcoin.openwallet</string>
    <string name="openwallet_website" translatable="false">https://openwallet.xyz</string>
    <string name="almost_equal_to" translatable="false">≈</string>
    <string name="action_scan_qr_code">Scan</string>
    <string name="action_share">Share</string>
    <string name="action_copy">Copy</string>
    <string name="action_edit_label">Edit label</string>
    <string name="action_empty_wallet">Use all funds</string>
    <string name="action_sweep_wallet">Sweep wallet</string>
    <string name="action_unspent_outputs">Unspent Outputs</string>
    <string name="unspent_outputs_title">Unspent Outputs</string>
    <string name="unspent_outputs_empty">No unspent outputs</string>
    <string name="action_settings">Settings</string>
    <string name="action_support">Contact support</string>
    <string name="action_about">About</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_sign_verify_message">Sign/verify message</string>
    <string name="action_account_details">Account details</string>
    <string name="action_exchange_history">Exchange history</string>
    <string name="action_new_address">New address</string>
    <string name="action_swap_coins">Swap coins</string>
    <string name="action_delete">Delete</string>
    <string name="action_change_address_type">Change address type</string>
    <string name="error_generic">Error occurred while performing action</string>
    <string name="error_could_not_read_wallet">Could not read wallet</string>
    <string name="error_camera">Could not access the device camera</string>
    <string name="button_ok">OK</string>
    <string name="button_next">Next</string>
    <string name="button_finish">Finish</string>
    <string name="button_return">Return</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_default">Default</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="button_delete">Delete</string>
    <string name="button_add">Add</string>
    <string name="button_save">Save</string>
    <string name="button_remove">Remove</string>
    <string name="button_edit">Edit</string>
    <string name="button_send">Send</string>
    <string name="button_sign">Sign</string>
    <string name="button_verify">Verify</string>
    <string name="button_skip">Skip</string>
    <string name="button_retry">Retry</string>
    <string name="button_download">Download</string>
    <string name="button_agree">Agree</string>
    <string name="button_disagree">Disagree</string>
    <string name="button_add_coins">+ Coins</string>
    <string name="button_execute">Execute</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="erase_address">Erase address</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="wallet_title_request">receive</string>
    <string name="wallet_title_balance">balance</string>
    <string name="wallet_title_send">send</string>
    <string name="wallet_locked_message">Your wallet is locked</string>
    <string name="wallet_is_not_locked_message">Your wallet is not locked</string>
    <string name="unlock_wallet_title">Unlock your wallet</string>
    <string name="unlocking_wallet_working">Unlocking your wallet&#8230;</string>
    <string name="unlocking_wallet_error_title">Could not unlock your wallet</string>
    <string name="zec_unlock_for_sync_message">Zcash needs your password once per session to sync. Your balance stays paused until then.</string>
    <string name="address_type_zec_unified">Unified</string>
    <string name="address_type_zec_transparent">Transparent</string>
    <string name="address_type_zec_shielded">Shielded</string>
    <string name="unlocking_wallet_error_detail">Are you using the correct password? Please make sure that your password was entered correctly. Attempt to restore your wallet using its recovery phrase if this error persists.</string>
    <string name="powered_by">Powered by</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_services">Services</string>
    <string name="navigation_drawer_wallet">Wallet</string>
    <string name="navigation_drawer_manage">Manage</string>
    <string name="title_activity_manage_wallets">Manage Wallets</string>
    <string name="manage_wallets_add_button">+ Add Wallet</string>
    <string name="manage_wallets_tap_to_switch">Tap to switch</string>
    <string name="manage_wallets_active_label">Active wallet</string>
    <string name="manage_wallets_tap_for_options">Tap for options</string>
    <string name="manage_wallets_switch_action">Switch to this wallet</string>
    <string name="manage_wallets_rename_action">Rename</string>
    <string name="manage_wallets_delete_action">Delete</string>
    <string name="manage_wallets_options_active">%1$s (active)</string>
    <string name="manage_wallets_empty_slot">Empty slot</string>
    <string name="manage_wallets_switched">Switched to %1$s</string>
    <string name="manage_wallets_rename_title">Rename Wallet</string>
    <string name="manage_wallets_delete_title">Delete Wallet</string>
    <string name="manage_wallets_delete_message">Delete wallet \"%1$s\"? This cannot be undone.</string>
    <string name="manage_wallets_deleted">Deleted %1$s</string>
    <string name="manage_wallets_max_reached">Maximum of 5 wallets reached</string>
    <string name="biometric_prompt_title">Unlock OpenWallet NYC</string>
    <string name="biometric_prompt_subtitle">Authenticate to access your wallet</string>
    <string name="fee">Transaction fee</string>
    <string name="send">Send</string>
    <string name="trade">Exchange</string>
    <string name="receive">Receive</string>
    <string name="welcome_text">Welcome to OpenWallet</string>
    <string name="create_wallet">Create a new wallet</string>
    <string name="restore_wallet">Restore a wallet</string>
    <string name="test_wallet">Test wallet</string>
    <string name="override_wallet_warning_title">Override existing wallet?</string>
    <string name="override_new_wallet_warning_message">If you create a new wallet, your existing wallet will be lost unless you backed up your <i>recovery phrase</i>.</string>
    <string name="override_restore_wallet_warning_message">If you restore a wallet, your existing wallet will be lost unless you backed up your <i>recovery phrase</i>.</string>
    <string name="incompatible_device_warning_title">Incompatible device</string>
    <string name="incompatible_device_warning_message">This device cannot perform certain cryptographic functions due to software or hardware bugs and limitations.\nIn some cases, this might be solved with an update from the device manufacturer.\n\nFeel free to reach out if you have any questions: https://reddit.com/r/openwallet</string>
    <string name="seed_info">This is your <i>recovery phrase</i>, which is used to generate the keys for your wallet. Please write it down on a piece of paper and store it in a secure place. Anyone with access to your <i>recovery phrase</i> has total access to your wallet and all of its funds.\nIf you lose your <i>recovery phrase</i>, your wallet cannot be recovered.</string>
    <string name="seed_title">Your recovery phrase</string>
    <string name="seed_regenerate_title">Touch to generate a new recovery phrase</string>
    <string name="backed_up_seed">I have safely stored my recovery phrase</string>
    <string name="restore_info">Please enter your recovery phrase:</string>
    <string name="restore_seed_protected">Use a BIP39 passphrase</string>
    <string name="restore_skip_title">Skipping verification</string>
    <string name="restore_skip_info1">Please make sure that your recovery phrase matches the following:</string>
    <string name="restore_skip_info2">It is recommended that you complete verification to ensure the validity of your recovery phrase.</string>
    <string name="restore_error_checksum">Recovery phrase is not valid. Please check for spelling errors.</string>
    <string name="restore_error_words">Recovery phrase contains unrecognized words.</string>
    <string name="restore_error_mismatch">Recovery phrase entered does not match stored recovery phrase.</string>
    <string name="restore_error">Could not verify your recovery phrase. %1$s</string>
    <string name="extra_entropy">Extra entropy</string>
    <string name="enter_password">Enter your password</string>
    <string name="edit_account_description_label">Description</string>
    <string name="pref_title_restore_wallet">Restore wallet</string>
    <string name="pref_title_exchange_rates">Exchange rates</string>
    <string name="pref_title_manual_receiving_addresses">Manual receiving addresses</string>
    <string name="pref_summary_manual_receiving_addresses">Do not automatically create a new address for every transaction</string>
    <string name="pref_category_display">Display</string>
    <string name="pref_category_privacy">Privacy</string>
    <string name="pref_category_wallet">Wallet</string>
    <string name="pref_category_advanced">Advanced</string>
    <string name="pref_category_local_data">Local data</string>
    <string name="pref_title_dark_mode">Dark mode</string>
    <string name="pref_summary_dark_mode">Use dark theme</string>
    <string name="pref_title_language">Language</string>
    <string name="pref_summary_language">Change app language</string>
    <string name="pref_title_hide_balances">Hide balances</string>
    <string name="pref_summary_hide_balances">Mask balance values for privacy</string>
    <string name="pref_title_screen_lock">Screen lock</string>
    <string name="pref_summary_screen_lock">Lock app after 30 seconds in background</string>
    <string name="pref_title_export_transactions">Export transactions</string>
    <string name="pref_summary_export_transactions">Export transaction history as CSV</string>
    <string name="pref_title_import_address_book">Import address book</string>
    <string name="pref_summary_import_address_book">Import contacts from a CSV file</string>
    <string name="pref_title_export_address_book">Export address book</string>
    <string name="pref_summary_export_address_book">Save contacts as a CSV file</string>
    <string name="add_coin_advanced_settings_show">ADVANCED SETTINGS ▼</string>
    <string name="add_coin_address_type_label">Address type</string>
    <string name="add_coin_address_type_legacy">Legacy (P2PKH)</string>
    <string name="add_coin_address_type_compatible">SegWit-compatible (P2SH-P2WPKH)</string>
    <string name="add_coin_address_type_native">Native SegWit (P2WPKH)</string>
    <string name="add_coin_address_type_bundled">All types, Coinomi-style (44\'+49\'+84\')</string>
    <string name="add_coin_segwit_not_activated">Requires SegWit network activation</string>
    <string name="add_coin_derivation_path_label">Derivation path</string>
    <string name="add_coin_derivation_path_invalid">Invalid derivation path — using default</string>
    <string name="title_activity_show_seed">Show recovery phrase</string>
    <string name="title_activity_debugging">Debugging</string>
    <string name="title_activity_coin_servers">Coin servers</string>
    <string name="title_activity_transaction_fees">Transaction fees</string>
</resources>